fix/display-post.component,add-comment.component,show-comments.component,subscribe-a-community.component/disabled unnecessary features,fixed ui, aligned user name and community name in single row

--- a/frontend/src/app/comments/add-comment/add-comment.component.css
+++ b/frontend/src/app/comments/add-comment/add-comment.component.css
@@ -46,3 +46,8 @@
 .list-group-submenu {
   margin-left: 20px;
 }
+textarea {
+  width: 100% !important;
+  height: 200px;
+  padding-right: 20px;
+}
