--- a/frontend/src/app/comments/show-comments/show-comments.component.css
+++ b/frontend/src/app/comments/show-comments/show-comments.component.css
@@ -6,14 +6,17 @@ ul {
   list-style: none;
 }
 
-/* ::ng-deep mat-panel-title {
+::ng-deep mat-panel-title {
   width: 100px !important;
-} */
+}
 mat-expansion-panel {
   box-shadow: none !important;
+  width: 100% !important;
 }
 textarea {
-  width: 500px;
+  width: 100% !important;
+  height: 200px !important;
+  padding: 10px !important;
 }
 
 ::ng-deep .mat-expansion-indicator {
@@ -21,4 +24,28 @@ textarea {
 }
 ::ng-deep .mat-expansion-panel-header {
   width: 100px !important;
+}
+
+.comment-text {
+  word-wrap: break-word !important;
+  max-width: 100%;
+  white-space: normal;
+}
+h6 {
+  word-wrap: break-word !important;
+  max-width: 100% !important;
+  margin-top: 10px;
+}
+.submit-btn {
+  margin-left: auto;
+  padding: 5px;
+}
+::ng-deep .ng-star-inserted {
+  max-width: 100% !important;
+}
+.row {
+  max-width: 1000px !important;
+}
+::ng-deep ng-container {
+  margin-left: 100px !important;
 }
