--- a/frontend/src/app/post/display-post/display-post.component.css
+++ b/frontend/src/app/post/display-post/display-post.component.css
@@ -60,6 +60,7 @@ ul {
   margin-top: 50%;
 }
 
-.content .community-name {
-  display: inline !important;
+.username,
+.community-name {
+  display: inline-block !important;
 }
